Upgrade to Java 17, JakartaEE